tests/negative/gold/export_local_test.gold
tests/negative/export_local_test.toit:5:8: error: Can't export local 'foo'
export foo
       ^~~
Compilation failed.
